--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>eu.cifpfbmoll</groupId>
 	<artifactId>pipeline-java-ci-cd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>pipeline-java-ci-cd</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
