--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=pipeline-java-ci-cd
+server.servlet.context-path=/
+spring.datasource.url=jdbc:postgresql://db:5432/pipedb
+spring.datasource.username=pipeuser
+spring.datasource.password=pipepass
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
