--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,11 +1,8 @@
-spring.application.name=pipeline-java-ci-cd
-server.servlet.context-path=/
-
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/pipeline_db
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/pipeline_test_db
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
