--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,8 @@
 				<configuration>
 					<configLocation>checkstyle.xml</configLocation>
 					<consoleOutput>true</consoleOutput>
-					<failsOnError>true</failsOnError>
+					<failsOnError>false</failsOnError>
+					<failOnViolation>false</failOnViolation>
 				</configuration>
 				<executions>
 					<execution>
