--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,12 +1,12 @@
-# Perfil de test usa Postgres local (en GitHub Actions: contenedor de servicio; localmente: docker compose)
-spring.datasource.url=jdbc:postgresql://localhost:5432/pipedb
-spring.datasource.username=pipeuser
-spring.datasource.password=pipepass
+# Unit tests: DB en memoria (no requiere Docker)
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
