--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,12 @@ services:
       - db_data:/var/lib/postgresql/data
 
   tomcat:
-    image: tomcat:10.1-jdk21-temurin
-    container_name: pipeline_tomcat
+    build: .
+    container_name: pipeline_app
     depends_on:
       - db
     ports:
       - "8080:8080"
-    volumes:
-      # Montamos el WAR como ROOT.war
-      - ./target/pipeline-java-ci-cd-0.0.1-SNAPSHOT.war:/usr/local/tomcat/webapps/ROOT.war:ro
 
 volumes:
   db_data:
